1998-12-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poem-om.el (poem-decode-raw-text): New function for MULE 1.
	(poem-encode-raw-text-CRLF): Likewise.
	(raw-text): New coding-system for MULE 1.
	(raw-text-dos): Likewise.
	(insert-file-contents-as-raw-text): Share implementation.
	(write-region-as-raw-text-CRLF): Likewise.
	(find-file-noselect-as-raw-text): Likewise.

1998-12-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poem-om.el: Share definition of coding-system `binary'.
	(write-region-as-binary): Share implementation.
	(find-file-noselect-as-binary): Likewise.

1998-12-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poem-om.el (insert-file-contents-as-binary): Share
	implementation.

1998-12-16  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-om.el (find-file-noselect-as-raw-text): Use
	`find-file-noselect-as-coding-system' under Mule 2.*.
	(find-file-noselect-as-binary): Likewise.
	(insert-file-contents-as-raw-text): Use
	`insert-file-contents-as-coding-system' under Mule 2.*.
	(insert-file-contents-as-binary): Likewise.
	(write-region-as-raw-text-CRLF): Use
	`write-region-as-coding-system' under Mule 2.*.
	(write-region-as-binary): Likewise.
	(truncate-string): Use `defun-maybe'.
	(toplevel): Don't refer to `running-emacs-19_29-or-later', use
	`emacs-major-version' and `emacs-minor-version' instead.

1998-12-16  Katsumi Yamaoka   <yamaoka@jpl.org>

	* pccl-om.el (toplevel): Don't require `poem'.
	Use `code-convert-string' instead of `encode-coding-string' or
	`decode-coding-string'.

	* poem-om.el (binary): EMACS 20 emulating coding-system for Mule
	2.3 based on Emacs 19.[28-34].
	(raw-text): EMACS 20 emulating coding-system based on native CCL
	for Mule 2.3 based on Emacs 19.[28-34].
	(raw-text-dos): Likewise.
	(find-file-noselect-as-binary): Separate for some Mules.

1998-12-15  Tanaka Akira  <akr@jaist.ac.jp>

	* pccl-20.el: Do not require 'poem.

1998-12-14  Katsumi Yamaoka   <yamaoka@jpl.org>
